# ci-land

./: README.md  cil  cil.bat  cil_format.py  splash-win.txt  splash.txt
cil_format/: appveyor.py  cli.py  travis.py
cpp/cget/: README.md  cenvs.sh  cget.sh
cpp/cget/profiles/: clang-8-d-static.sh
cpp/clang-format/: .clang-format  .clang-format-cruft  CMakeLists.txt  run.sh
cpp/cmake-format/: config.py  run.sh
cpp/conan/: build.sh  clean.sh  conan.bat  conan.sh  docs.sh  package.bat  package.sh  print_version.sh  run.bat  run.ps1  run.sh  test.sh
cpp/conan/appveyor/: install.bat  run.bat
cpp/conan/profiles/: all  clang-8  clang-8-d-shared  clang-8-d-static  clang-8-d-static-32  clang-8-r-static  clang-8-r-static-32  emscripten  emscripten-js-d  emscripten-w-r  msvc  msvc-d-shared  msvc-d-static  msvc-r-static  osx-d-shared  osx-r-static
cpp/conan/travis/: docs.sh  install.sh  run.sh
cpp/conan/version_extractor/: conans.py
cpp/vcpkg/: vcpkg.sh
javascript/: run.sh  st.sh
python/: run.sh  st.sh
